kubernetes/apps/monitoring/kube-prometheus-stack/app/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    # Authentik forward auth annotations
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-prometheus-forward-auth.kube-system.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://prometheus.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Proxy-Secret 9f81633c385e0ca6166f214eb37684166df69ea8e06ef245c42e09ec9080e9d58193b1d57cb72019fdd4b4578fe0299c63a26ad508c0a9aa31c31fdd6b7f3e5a;
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "prometheus.${SECRET_DOMAIN}"
  rules:
    - host: "prometheus.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
